--- a/ManageTasks.Domain.Entities/ManageTasks.Domain.Entities.csproj
+++ b/ManageTasks.Domain.Entities/ManageTasks.Domain.Entities.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ManageTasks.Contracts\ManageTasks.Contracts.csproj" />
   </ItemGroup>
 
