--- a/ManageTasks.Domain/ManageTasks.Domain.csproj
+++ b/ManageTasks.Domain/ManageTasks.Domain.csproj
@@ -7,6 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.9" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ManageTasks.Contracts\ManageTasks.Contracts.csproj" />
     <ProjectReference Include="..\ManageTasks.Domain.Entities\ManageTasks.Domain.Entities.csproj" />
     <ProjectReference Include="..\ManageTasks.Infrastructure\ManageTasks.Infrastructure.csproj" />
