--- a/ManageTasks.Infrastructure/ManageTasks.Infrastructure.csproj
+++ b/ManageTasks.Infrastructure/ManageTasks.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
+    <PackageReference Include="System.ComponentModel" Version="4.3.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ManageTasks.Contracts\ManageTasks.Contracts.csproj" />
   </ItemGroup>
 
