:boom: Added additional OpenAPI swagger config

--- a/ManageTasks.API/appsettings.Development.json
+++ b/ManageTasks.API/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "SwaggerOptions": {
+    "JsonRoute": "swagger/{documentName}/swagger.json",
+    "Description": "Manage Tasks API - V1",
+    "UIEndpoint": "/swagger/v1/swagger.json",
+    "Contact": {
+      "Name": "Cristian Bonilla",
+      "Email": "cristiancamilo10_95@outlook.com",
+      "Url": "https://github.com/CristianBonilla"
+    }
   }
 }
