:boom: Added config for manage tasks database

--- a/ManageTasks.API/appsettings.Development.json
+++ b/ManageTasks.API/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ManageTasksConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=[DataDirectory]\\ManageTasks.mdf;Initial Catalog=ManageTasks;Integrated Security=True;Multiple Active Result Sets=True;Connect Timeout=30"
+  },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
     "Description": "Manage Tasks API - V1",
