--- a/ManageTasks.Domain/ManageTasks.Domain.csproj
+++ b/ManageTasks.Domain/ManageTasks.Domain.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\ManageTasks.Infrastructure\ManageTasks.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
