--- a/ManageTasks.API/appsettings.Development.json
+++ b/ManageTasks.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ManageTasksConnection": "Server=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=[DataDirectory]\\ManageTasks.mdf;Initial Catalog=ManageTasks;Integrated Security=True;Multiple Active Result Sets=True;Connect Timeout=30"
+    "ManageTasksConnection": "Server=sql-server,1433;Database=ManageTasks;User=sa;Password=ManageTasks__Password;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
