--- a/ManageTasks.API/appsettings.json
+++ b/ManageTasks.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ManageTasksConnection": "Server=manage-tasks-DB,1433;Database=ManageTasks;User=sa;Password=ManageTasks__Password;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "ManageTasksConnection": "Server=manage-tasks-db;Database=ManageTasks;User=sa;Password=ManageTasks__Password;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "SwaggerOptions": {
     "JsonRoute": "swagger/{documentName}/swagger.json",
