--- a/launchSettings.json
+++ b/launchSettings.json
@@ -3,12 +3,8 @@
     "Docker Compose": {
       "commandName": "DockerCompose",
       "commandVersion": "1.0",
-      "composeLaunchAction": "LaunchBrowser",
-      "composeLaunchServiceName": "managetasks.api",
-      "composeLaunchUrl": "{Scheme}://localhost:{ServicePort}/swagger",
       "serviceActions": {
-        "managetasks.api": "StartDebugging",
-        "sqlserver": "StartWithoutDebugging"
+        "manage-tasks-api": "StartDebugging"
       }
     }
   }
